--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DogDev</title>
+    <title>Jardim Virtual</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/hero.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="banner">Economize! Ganhe 61% OFF no seu primeiro pedido e uma tigela Grátis</a>
+        <a href="" class="banner">Economize! Ganhe 50% OFF no seu primeiro pedido e frete gratis para sua primeira mudinha</a>
         <div class="container">
             <div class="area">
                 <div class="logo">
@@ -49,8 +49,8 @@
     <section class="hero">
         <div class="container">
             <div class="box">
-                <h1>COMIDA DE VERDADE <span>PARA SEU DOG!</span></h1>
-                <h2>Pedidos Personalizados - Prontos para Comer!</h2>
+                <h1>FLORES DE VERDADE <span>PARA SUA CASA!</span></h1>
+                <h2>Pedidos Personalizados - Prontos para decorar!</h2>
                 <a href="" class="button">Crie seu Plano</a>
             </div>
         </div>
@@ -74,17 +74,16 @@
     <section class="topics container">
         <div class="topic">
             <div class="left">
-                <img src="./assets/images/t1.jpg" alt="">
+                <img src="./assets/image/floricultura.webp" alt="">
             </div>
             <div class="right">
-                <p>Por que pais de pet escolhem DogDev?</p>
+                <p>Por que amantes de plantas escolhem o Jardim Virtual?</p>
                 <ul>
-                    <li>Comem felizes</li>
-                    <li>Peso equilibrado</li>
-                    <li>Melhor 💩</li>
-                    <li>Pelo brilhante</li>
-                    <li>Menos idas ao vet</li>    
-                    <li>Mais energia</li>
+                    <li>melhores decorações</li>
+                    <li>recebem mimos a cada compra</li>
+                    <li>A compra online elimina a necessidade de deslocamento</li>
+                    <li>O site intuitivo e fácil de usar</li>
+                    <li>A empresa demonstra preocupação com o meio ambiente</li>    
                 </ul>
                 <div>
                     <a href="" class="button">Começe Agora</a>
@@ -93,13 +92,13 @@
         </div>
         <div class="topic reverse">
             <div class="left">
-                <img src="./assets/images/t2.jpg" alt="">
+                <img src="./assets/image/images.jpg" alt="">
             </div>
             <div class="right">
                 <ul>
-                    <li>Receitas feitas por vets com ingredientes reais feitos na <span>cozinha dos humanos</span></li>
+                    <li>O Jardim Virtual oferece um blog rico em conteúdo, com dicas de jardinagem, tutoriais e <span>guias de cultivo</span></li>
                 </ul>
-                <p>Nós oferecemos comida para dogs excepcionais, com base na ciência, para dar soluções nutricionais de qualidade incontestável
+                <p>Isso permite que os amantes de plantas aprofundem seus conhecimentos e aprendam a cuidar de suas plantas da melhor forma possível.
                 </p>
                 <div>
                     <a href="" class="button2">Começe Agora</a>
@@ -108,7 +107,7 @@
         </div>
         <div class="topic">
             <div class="left">
-                <img src="./assets/images/t3.jpg" alt="">
+                <img src="./assets/image/images (1).jpg" alt="">
             </div>
             <div class="right">
                 <ul>
@@ -116,7 +115,7 @@
                     <li>Preparado</li>
                     <li>Entregue</li>
                 </ul>
-                <p>Escolha as características unicas do seu dog e nós vamos formular o plano alimentar perfeito e nutritivo, entregue na sua porta</p>
+                <p>Escolha as características unicas de sua primeira mudinha e nós vamos formular o plano de cultivo, entregue na sua porta</p>
                 <div>
                     <a href="" class="button2">Começe Agora</a>
                 </div>
@@ -125,37 +124,36 @@
     </section>
     <section class="products container" id="products">
         <h2>Nossos <span>Produtos</span></h2>
-        <p>Você pode comprar várias receitas, petiscos e acessórios. Perfeito para testar o gosto e oferecer ao seu dog uma variedade de sabores. Cuida pai de pet!</p>
         <div class="grid">
             <a href="" class="product">
-                <div class="image" style="background-image: url(./assets/images/comida-1.png);"></div>
+                <div class="image" style="background-image: url(./assets/image/buque.jpg);"></div>
                 <div class="info">
-                    <p class="title">Comida cozinhada</p>
-                    <p class="description">Delicadamente preparado para obter a textura e o sabor suculentos que os dogs apreciam e para preservar os nutrientes vitais de que necessitam.</p>
+                    <p class="title">Buquês</p>
+                    <p class="description">Um buquê é um arranjo floral cuidadosamente elaborado, combinando flores e folhagens para criar uma expressão de beleza e sentimentos.</p>
                     <p class="link">Saiba Mais</p>
                 </div>
             </a>
             <a href="" class="product">
-                <div class="image" style="background-image: url(./assets/images/comida-2.png);"></div>
+                <div class="image" style="background-image: url(./assets/image/arranjo_mesa.jpeg);"></div>
                 <div class="info">
-                    <p class="title">Comida assada</p>
-                    <p class="description">Assado lentamente para obter o sabor e a crocância que os filhotes desejam e para preservar os nutrientes vitais de que necessitam</p>
+                    <p class="title">Arranjos de Mesa</p>
+                    <p class="description">Arranjos de mesa são elementos decorativos versáteis e encantadores, capazes de transformar qualquer ambiente com sua beleza e elegância</p>
                     <p class="link">Saiba Mais</p>
                 </div>
             </a>
             <a href="" class="product">
-                <div class="image" style="background-image: url(./assets/images/comida-3.png);"></div>
+                <div class="image" style="background-image: url(./assets/image/images\ \(1\).jpg);"></div>
                 <div class="info">
-                    <p class="title">Acessórios</p>
-                    <p class="description">Formulado por veterinários para atender a uma variedade de necessidades de saúde e bem-estar.</p>
+                    <p class="title">Orquídeas</p>
+                    <p class="description">As orquídeas são plantas fascinantes e exóticas, conhecidas por sua beleza singular e diversidade de formas e cores.</p>
                     <p class="link">Saiba Mais</p>
                 </div>
             </a>
             <a href="" class="product">
-                <div class="image" style="background-image: url(./assets/images/comida-4.png);"></div>
+                <div class="image" style="background-image: url(./assets/image/images.jpg);"></div>
                 <div class="info">
-                    <p class="title">Petistos</p>
-                    <p class="description">Orgânico, certificado e rico em proteínas ára agradar o seu doguinho.</p>
+                    <p class="title">Suculentas</p>
+                    <p class="description">As suculentas são plantas fascinantes e populares, conhecidas por sua capacidade de armazenar água em suas folhas, caules e raízes.</p>
                     <p class="link">Saiba Mais</p>
                 </div>
             </a>
@@ -168,15 +166,15 @@
         </div>
     </section>
     <section class="faq container">
-        <h2>Ganhe tempo vendo <span>aqui</span></h2>
+        <h2>curiosidades <span>aqui:</span></h2>
         <div class="accordion">
             <div class="item">
                 <div class="title">
-                    <p>Para que comprar no Dogdev?</p>
+                    <p>Para que comprar no Jardim Virtual?</p>
                     <img src="./assets/images/arrow.svg" alt="">
                 </div>
                 <div class="body">
-                    <p>No DogDev, não fazemos comida de cachorro. Fazemos comida para cachorros. Nossas refeições são feitas com ingredientes alimentares integrais de alta qualidade, de qualidade humana, que são mais biodisponíveis do que recheios e outros ingredientes de baixa qualidade. Preparamos e cozinhamos nossas refeições nas cozinhas residenciais, da mesma forma que a comida é feita. Cada refeição é recheada quente para garantir a segurança e congelada rapidamente para manter o frescor.</p>
+                    <p> o Jardim Virtual é a escolha ideal para quem busca praticidade, variedade, qualidade e atendimento personalizado na hora de comprar flores e plantas online.</p>
                 </div>
             </div>
             <div class="item">
@@ -185,27 +183,27 @@
                     <img src="./assets/images/arrow.svg" alt="">
                 </div>
                 <div class="body">
-                    <p>Você nos conta sobre seu dog e nós criaremos um plano alimentar que faça sentido para vocês dois. Enviamos a quantidade certa de comida à sua porta para que você nunca se preocupar em acabar. Cada refeição é repartida perfeitamente para que seu filhote sempre receba a quantidade certa de nutrientes.
+                    <p>Você escolhe o plano que mais combina com seu estilo e ritmo de vida, definindo a frequência das entregas e os tipos de produtos que deseja receber.
                     </p>
                 </div>
             </div>
             <div class="item">
                 <div class="title">
-                    <p>Posso pedir uma amostra para testar?</p>
+                    <p>Posso pedir uma amostra de terra para testar?</p>
                     <img src="./assets/images/arrow.svg" alt="">
                 </div>
                 <div class="body">
-                    <p>Não oferecemos amostras no momento, no entanto, oferecemos uma garantia de devolução de 100% do dinheiro em seu primeiro pedido se você e sue dog não estiverem completamente satisfeitos com sua experiência. Você também pode começar com um Plano Top, que equivale a 25% de um Plano Premium.
+                    <p>Sim! No Jardim Virtual, entendemos a importância de garantir que o solo esteja perfeito para suas plantas.
                     </p>
                 </div>
             </div>
             <div class="item">
                 <div class="title">
-                    <p>Como faço a transição para o Dogdev?</p>
+                    <p>Como faço a transição para o Jarim Virtual?</p>
                     <img src="./assets/images/arrow.svg" alt="">
                 </div>
                 <div class="body">
-                    <p>Comece misturando DogDev com a comida atual do seu dog. DogDev deve representar cerca de 25% da refeição. Aumente lentamente essa quantidade até que seu cão coma 100% DogDev. Se o seu cão tem esômago sensível ou apresenta pequenos problemas de barriga, alimente uma quantidade menor e aumente lentamente até que ele se adapte à nova comida.
+                    <p> Comece explorando nosso site, um verdadeiro jardim online, onde cada categoria de produto é um canteiro florido esperando para ser descoberto..
                     </p>
                 </div>
             </div>
@@ -215,8 +213,7 @@
                     <img src="./assets/images/arrow.svg" alt="">
                 </div>
                 <div class="body">
-                    <p>Se você deseja alimentar seu dog com uma dieta 100% preparada na hora, completa e balanceada, então nosso Plano Premium é ideal para você. Se você quiser adicionar um pouco de comida recém-cozida à dieta atual do seu filhote, então nosso Plano Top é uma ótima escolha porque pode ser misturado com a comida atual ou servindo como uma refição ocasional para nutrição extra.
-                    </p>
+                    <p>Para obter informações precisas sobre as diferenças entre os planos Top e Premium de um serviço específico
                 </div>
             </div>
         </div>
